[package]
name = "identity-wallet"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "identity_wallet"
path = "src/lib.rs"
# staticlib  → iOS static binary
# cdylib     → Android shared library
# rlib       → normal `cargo build` + integration tests
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Tauri-specific — declared locally (not in workspace.dependencies per design plan)
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
# In-app OAuth via ASWebAuthenticationSession (iOS/macOS). VENDORED in-repo (not a live git dep)
# because it sits in the wallet's auth path — we audit and pin the exact source. Wraps the
# Apple-blessed session so the custom-scheme callback is captured by the session itself, instead
# of relying on Safari to auto-launch the app from a redirect (which iOS blocks). Provenance +
# audit notes: apps/identity-wallet/vendor/tauri-plugin-auth-session/VENDORED.md.
tauri-plugin-auth-session = { path = "../vendor/tauri-plugin-auth-session" }
log = "0.4"
url = "2"
# serde/serde_json are in workspace.dependencies (root Cargo.toml lines 30-32)
serde = { workspace = true }
serde_json = { workspace = true }
# reqwest via the workspace dep (default-features = false + rustls): iOS has no OpenSSL;
# rustls is the only option for TLS without adding system dependencies. form: the OAuth
# PAR/token-exchange requests are form-encoded (feature-gated since reqwest 0.13).
reqwest = { workspace = true, features = ["form"] }
# Rebuild a `reqwest::Response` from parts in `oauth_client.rs` after reading a DPoP 400 body
# (nonce challenge vs. genuine error) — `reqwest::Response: From<http::Response<T>>`.
http = { workspace = true }
security-framework = { version = "3", features = ["OSX_10_12"] }
thiserror = { workspace = true }
crypto = { workspace = true }
p256 = { workspace = true }
multibase = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand_core = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
hickory-resolver = { workspace = true }
zeroize = { workspace = true }
urlencoding = { workspace = true }
chrono = { workspace = true }
# Client-side CAR validation for the user-held repo backup (repo_backup.rs). These are the
# pure, no_std-capable IPLD primitives repo-engine already uses (already resolved in the
# lockfile, single-major), NOT the repo-engine crate itself and NOT atrium-repo: the wallet
# reads a fetched repo CAR's framing/hashes, decodes the commit, and walks the MST by its
# documented block shape — no MST-building or repo-engine dependency enters the iOS staticlib.
# `cid` gives CIDv1 parsing (`Cid::read_bytes`, codec/multihash inspection); `ipld-core` the
# `Ipld` model for decoding the commit + MST nodes; `serde_ipld_dagcbor` the dag-cbor decoder.
cid = "0.11"
ipld-core = { version = "0.4", features = ["serde"] }
serde_ipld_dagcbor = "0.6"

# Biometric (Face ID / Touch ID) gate on the migration PLC-op submission. Mobile-only —
# there is no desktop implementation, so it is target-gated to keep the macOS host build
# (and the test suite) free of a dependency it cannot compile. Registered behind
# `#[cfg(mobile)]` in lib.rs. Same version admin-companion already uses.
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tauri-plugin-biometric = "2"
# Camera QR scanning for the wallet-confirmed OAuth consent scan path. Mobile-only (no desktop
# implementation) and registered behind `#[cfg(mobile)]` in lib.rs, so the macOS host build and test
# suite never compile it. Version lives in the workspace table (shared with admin-companion's Pair
# screen); opted in here under the iOS/android target so a host build stays plugin-free.
tauri-plugin-barcode-scanner = { workspace = true }
# Reuse the audited in-repo native plugin. The wallet calls its single command through the current
# Tauri API directly, avoiding the upstream's stale 0.0.1 guest package and API dependency.
tauri-plugin-sharesheet = { path = "../../admin-companion/vendor/tauri-plugin-sharesheet" }

# iCloud Drive ubiquity-container resolution for the blob backup (blob_backup.rs):
# `NSFileManager.URLForUbiquityContainerIdentifier` has no Rust-crate binding in
# security-framework, so it is reached through the objc2 Foundation bindings — the
# same crate family the vendored auth-session plugin already uses (version in the
# workspace table, so no duplicate majors enter the lockfile). iOS-only: every
# other platform uses the local-directory fallback and never compiles this.
# `NSError` is needed for `startDownloadingUbiquitousItemAtURL:error:` (the restore
# path's on-demand download of an evicted placeholder), which returns `Result<(), NSError>`.
# `NSDate` is needed for the background-backup task's `earliestBeginDate` (bg_backup.rs).
[target.'cfg(target_os = "ios")'.dependencies]
objc2-foundation = { workspace = true, features = ["NSFileManager", "NSURL", "NSString", "NSError", "NSDate"] }
# Background media-backup scheduling (bg_backup.rs): the iOS `BGProcessingTask` that keeps an
# opted-in identity's iCloud mirror topped up without opening the app. `objc2` supplies
# `Retained`/`AnyThread`; `objc2-background-tasks` the `BGTaskScheduler`/`BGProcessingTaskRequest`
# bindings; `block2` the launch + expiration handler blocks the scheduler stores. Same objc2 0.6
# family as objc2-foundation, so no duplicate major enters the lockfile. iOS-only — every other
# platform leaves the scheduling surface inert.
objc2 = { workspace = true }
objc2-background-tasks = { workspace = true, features = ["BGTaskScheduler", "BGTask", "BGTaskRequest", "block2", "dispatch2"] }
block2 = { workspace = true }
# "Wi-Fi only" background-backup check: SCNetworkReachability's IS_WWAN flag, since a
# BGProcessingTaskRequest can't require an unmetered link (bg_backup.rs).
system-configuration = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
httpmock = "0.8"
tempfile = { workspace = true }
# Tests construct valid + deliberately-broken repo CARs by hand (commit + MST nodes + record
# blocks framed into CARv1) to exercise repo_backup's client-side validator. `multihash` wraps
# the SHA2-256 digest into a CIDv1 multihash on the build side; the validator itself reads CIDs
# through `cid`'s own API and never needs this crate at runtime.
multihash = "0.19"

[build-dependencies]
# Tauri-specific — declared locally
tauri-build = { version = "2", features = [] }

# Tauri-recommended release optimizations for mobile binary size.
# IMPORTANT: Cargo ignores [profile.*] in workspace member crates — these settings
# have NO EFFECT here because src-tauri is always built as a workspace member.
# They are included per the design plan as documentation of Tauri's recommendations.
# When iOS release binary size becomes a concern, move these to the root Cargo.toml's
# [profile.release] section (note: that will affect ALL workspace crates' release builds).
# [profile.release]
# strip = true
# lto = true
# opt-level = "z"
